Corrected archive nav UI layout bugs

--- a/www/style-brutalist.mac.css
+++ b/www/style-brutalist.mac.css
@@ -284,9 +284,6 @@ a#inbox-indicator.new-messages:hover::before {
 .sublevel-nav + #top-nav-bar + h1.listing {
 	margin-top: 1.5em;
 }
-.archive-nav + #top-nav-bar {
-	margin-top: 1em;
-}
 .archive-nav + #top-nav-bar + h1.listing {
 	margin-top: 1em;
 }
@@ -658,7 +655,7 @@ a#inbox-indicator.new-messages:hover::before {
 /************/
 
 .archive-nav {
-	margin: 1.25em 0.5em;
+	margin: 1.25em 0.5em 0 0.5em;
 	padding: 0.25em;
 }
 .archive-nav > * {
@@ -3137,9 +3134,6 @@ div > .MJXc-display {
 /*==========*/
 
 @media only screen and (max-width: 900px) {
-	.archive-nav {
-		margin: 1.25em 0.5em;
-	}
 	div[class^='archive-nav-'] {
 		flex-wrap: wrap;
 		justify-content: flex-start;
